--- a/autotask_web_app/templates/input_validation.html
+++ b/autotask_web_app/templates/input_validation.html
@@ -12,7 +12,7 @@
                 <div class="portlet-title tabbable-line">
                     <div class="caption caption-md">
                         <i class="icon-globe theme-font hide"></i>
-                        <span class="caption-subject font-blue-madison bold uppercase">Configure Input Validation {% if step == 2 %} - {{ input_validation_dict.ValidationGroup.name }} {% endif %}</span>
+                        <span class="caption-subject font-blue-madison bold uppercase">Create New Validation Group</span>
                     </div>
                     <ul class="nav nav-tabs">
                         <li class="active">
